# datasette-scribe

./: .gitignore  AGENTS.md  Justfile  NOTES  README.md  build.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml  test.yml
datasette_scribe/: __init__.py  page_data.py  router.py  schema.sql  voxtral_api.py
datasette_scribe/cli/: __init__.py  _db.py  add.py  serve.py
datasette_scribe/frontend/: api.ts  utils.ts
datasette_scribe/frontend/components/: CollectionTag.tsx  Youtube.tsx  shoelace.tsx
datasette_scribe/frontend/targets/collection/: index.tsx
datasette_scribe/frontend/targets/landing/: index.css  index.tsx
datasette_scribe/frontend/targets/transcript/: index.css  index.tsx
datasette_scribe/routes/: __init__.py  api_collections.py  api_speakers.py  api_transcriptions.py  pages.py
datasette_scribe/static/: index.min.js
datasette_scribe/static/landing/: index.min.css  index.min.js
datasette_scribe/static/transcript/: index.min.css  index.min.js
datasette_scribe/templates/: collection.html  landing.html  scribe_base.html  transcript.html
frontend/: api.d.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: store.svelte.ts
frontend/src/components/: DatabaseSelector.svelte
frontend/src/page_data/: CollectionDetailPageData.types.ts  CollectionDetailPageData_schema.json  NewTranscriptionPageData.types.ts  NewTranscriptionPageData_schema.json  ScribePageData.types.ts  ScribePageData_schema.json  TranscriptionDetailPageData.types.ts  TranscriptionDetailPageData_schema.json  load.ts
frontend/src/pages/collection_detail/: CollectionDetailPage.svelte  index.ts
frontend/src/pages/new_transcript/: NewTranscriptionPage.svelte  index.ts
frontend/src/pages/scribe/: ScribePage.svelte  TranscriptionList.svelte  index.ts
frontend/src/pages/transcription_detail/: AudioPlayer.svelte  SpeakerSidebar.svelte  TranscriptEntryList.svelte  TranscriptionDetailPage.svelte  index.ts  transcription-utils.ts
scripts/: typegen-pagedata.py
tests/: demo-worker.py  test_scribe.py
