[project]
name = "datasette-scribe"
version = "0.2a0"
description = "Transcribe audio in Datasette"
requires-python = ">=3.10"
authors = [{ name = "Alex Garcia" }]
license = "Apache-2.0"
classifiers = [
    "Framework :: Datasette",
]

dependencies = [
    "datasette>=1a23",
    "datasette-plugin-router>=0.0.1a2",
    "datasette-vite>=0.0.1a1",
]


[project.urls]
Homepage = "https://github.com/datasette/datasette-scribe"
Changelog = "https://github.com/datasette/datasette-scribe/releases"
Issues = "https://github.com/datasette/datasette-scribe/issues"
CI = "https://github.com/datasette/datasette-scribe/actions"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
yt = ["yt-dlp"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff>=0.15.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
datasette-scribe = "datasette_scribe.cli:scribe_cli"

[project.entry-points.datasette]
scribe = "datasette_scribe"

[tool.setuptools.package-data]
datasette_scribe = ["static/**/*", "templates/*", "manifest.json", "*.sql"]

[tool.setuptools.packages.find]
exclude = [
    "frontend",
]
